--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             <form name="form" 
                   id="cosmicForm" 
                   method="POST" 
-                  action="https://forms.zohopublic.eu/canvigroup131/form/Test1/formperma/-N2i7qNxTtDjhu0-ZWtneOYCYTULqj6hQmzo0UZjB-w?zf_rszfm=1" 
+                  action="https://forms.canvigroup.com/canvigroup131/form/Test1/formperma/-N2i7qNxTtDjhu0-ZWtneOYCYTULqj6hQmzo0UZjB-w" 
                   target="_blank"
                   enctype="multipart/form-data" 
                   onsubmit="return zf_ValidateAndSubmit()">
